--- a/src/Components/Layout/Outlet/SearchPage/searchpage.css
+++ b/src/Components/Layout/Outlet/SearchPage/searchpage.css
@@ -110,7 +110,33 @@
   touch-action: manipulation;
   cursor: pointer;
   will-change: transform;
+  min-width: var(--container-width);
+}
 
+@media screen and (min-width: 1200px) {
+  :root {
+      --container-width: 900px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  :root {
+      --container-width: 700px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+      --container-width: 500px;
+  }
+  .single-track-container {
+  }
+}
+
+@media screen and (max-width: 576px) {
+  :root {
+      --container-width: 300px;
+  }
 }
 
 .single-track-container:hover {
@@ -264,4 +290,7 @@
   .track-name {
     font-size: 1.6rem;
   }
+}
+.searchpage-album-container {
+  width: 100%;
 }
