--- a/src/Components/Layout/Outlet/SearchPage/searchpage.css
+++ b/src/Components/Layout/Outlet/SearchPage/searchpage.css
@@ -1,5 +1,4 @@
 
-
 .search-container {
   display: flex;
   flex-direction: column;
@@ -7,7 +6,6 @@
   width: 100%;
   align-items: center;
 }
-
 .searchHeader{
   padding:3rem 2rem 2rem;
   
@@ -41,7 +39,6 @@
   justify-content: center; 
   align-items: center; 
   width: 100%;
-  min-height: 100vh;
 }
 .button-add-results-container{
   display: flex;
@@ -63,6 +60,7 @@
   border: 1px solid white;
   transition: background-color 0.3s ease, transform 0.3s ease;
   cursor: pointer;
+  margin-left: 0;
 }
 
 .track-img-name-container{
@@ -70,7 +68,6 @@
   justify-items: center;
   align-items: center;
   gap: 2rem;
-  min-height: 100vh;
 }
 
 .button-add-results-container{
